minor: Arrays.asList -> List.of